2008-10-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Catch dodgy errors from the TIP website.
	* tkchat_mms.tcl:   Committed ammendments from the conference
	* tkchat_mjpeg.tcl: for the streaming plugins.

2008-10-27  Elchonon Edelson <eee@users.sourceforge.net>

	* tkchat.tcl:       Corrected the regexp that extracts the word to
	                    look up on Wiktionary when using "/wikid <word>"

2008-10-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mms.tcl:   Added restarting and auto-restart of stopped
	                    streaming audio and restart of files.

2008-10-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Fixed a bug handling the boundary marker and
	another that cause the feed to keep looping when it errored.

2008-10-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Added a version hook to announce information from
	* tkchat_mms.tcl:   the website version check to plugins. This lets
	* tkchat.tcl:       us push the conference urls for audio/video
	                    while the conference is ongoing.

2008-10-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mms.tcl: Fixed error inserting into menus when non-english
	* tkchat_mjpeg.tcl: Extended de i18n for the mms plugin
	* tkchat_leo.tcl:
	* tkchat.tcl: Minor fixes for i18n

2008-10-16  Reinhard Max  <max@suse.de>

	* tkchat_clock.tcl: Allow using time zones in addition to numeric
	offsets from GMT and default to the machine's local time zone.

2008-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* tkchat.tcl: Revised the Babelfish web scraping to follow
	the move of Babelfish from Altavista to Yahoo.

2008-08-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* msgs/de.msg: Merged updates from Matthias Kraft.
	* tkchat.tcl:  Include the locale in http useragent string.

2008-08-15  Kevin Kenny  <kennykb@acm.org>

	* tkchat.tcl: Fixed a bug whereby the KHIM bindings were not